--- a/requirements.txt
+++ b/requirements.txt
@@ -16,22 +16,26 @@ html5lib==1.1
 idna==3.10
 Jinja2==3.1.6
 jsbeautifier==1.15.4
-lantana==2.13.0
 Markdown==3.3.7
 markdown-callouts==0.4.0
 MarkupSafe==3.0.2
 mergedeep==1.3.4
 mkdocs==1.6.1
+mkdocs-add-number-plugin==1.2.2
 mkdocs-autolinks-plugin==0.7.1
 mkdocs-awesome-nav==3.1.2
+mkdocs-awesome-pages-plugin==2.10.1
+mkdocs-cinder==1.2.0
 mkdocs-get-deps==0.2.0
 mkdocs-git-authors-plugin==0.10.0
 mkdocs-git-revision-date-plugin==0.3.2
 mkdocs-include-markdown-plugin==7.1.7
+mkdocs-link-embeds-plugin==0.2.0
 mkdocs-macros-plugin==1.3.9
 mkdocs-material==9.6.18
 mkdocs-material-extensions==1.3.1
 mkdocs-mermaid2-plugin==1.2.2
+mkdocs-open-in-new-tab==1.0.8
 natsort==8.4.0
 packaging==25.0
 paginate==0.5.7
