--- a/.github/workflows/memo.yml
+++ b/.github/workflows/memo.yml
@@ -22,5 +22,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Deploy memo via MkDocs to GitHub Pages
-        run: mkdocs gh-deploy --force
+      - name: Deploy MkDocs to GitHub Pages
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          mkdocs gh-deploy --force --remote-name origin --remote-branch gh-pages
